--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "multiplayertetris",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Multiplayer Tetris server using Node.js and Socket.io",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
+  "keywords": ["tetris", "multiplayer", "socket.io", "nodejs"],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.21.2",
     "socket.io": "^4.8.1"
